# Raycaster

./: CMakeLists.txt
include/: camera.hpp  config.hpp
src/: camera.cpp  main.cpp
